# aws-via-haskell

./: .gitignore  LICENSE  README.md  aws-via-haskell.cabal  stack.yaml
dynamodb/: DynamoDBImports.hs  Main.hs
dynamodb-demo/: README.md  dynamodb-demo.cabal
dynamodb-demo/app/: Main.hs
dynamodb-demo/lib/: DynamoDBDemo.hs
dynamodb-demo/test/: DynamoDBDemoSpec.hs  Spec.hs
ec2/: EC2Imports.hs  Main.hs
lambda/: LambdaImports.hs  Main.hs
lib/: AWSViaHaskell.hs
lib/AWSViaHaskell/: AWS.hs  AWSInfo.hs  AWSPrelude.hs  AWSService.hs  Classes.hs  CodeGen.hs  Prelude.hs  Service.hs  TH.hs  Types.hs  Util.hs
rds/: Main.hs  RDSImports.hs
s3/: Main.hs  S3Imports.hs
s3-demo/: Main.hs  README.md  Setup.hs  s3-demo.cabal
sdb/: Main.hs
sqs/: Main.hs
ssm/: Main.hs  SSMImports.hs
