name:                                       aws-via-haskell
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/aws-via-haskell#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2017 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/aws-via-haskell.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            amazonka
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , lens
                                          , resourcet
                                          , template-haskell
                                          , text
  exposed-modules:                          AWSViaHaskell
                                          , AWSViaHaskell.AWSService
                                          , AWSViaHaskell.Classes
                                          , AWSViaHaskell.TH
                                          , AWSViaHaskell.Types
                                          , AWSViaHaskell.Util

executable dynamodb-app
  default-language:                         Haskell2010
  hs-source-dirs:                           dynamodb
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            amazonka
                                          , amazonka-dynamodb
                                          , aws-via-haskell
                                          , base >= 4.7 && < 5
                                          , lens
                                          , text
                                          , unordered-containers

executable ec2-app
  default-language:                         Haskell2010
  hs-source-dirs:                           ec2
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            amazonka
                                          , amazonka-core
                                          , amazonka-ec2
                                          , aws-via-haskell
                                          , base >= 4.7 && < 5
                                          , lens
                                          , text

executable lambda-app
  default-language:                         Haskell2010
  hs-source-dirs:                           lambda
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            aeson
                                          , amazonka
                                          , amazonka-iam
                                          , amazonka-lambda
                                          , amazonka-sts
                                          , aws-via-haskell
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , directory
                                          , filepath
                                          , lens
                                          , text
                                          , text-format
                                          , time
                                          , unordered-containers
                                          , zip-archive

executable s3-app
  default-language:                         Haskell2010
  hs-source-dirs:                           s3
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            amazonka
                                          , amazonka-s3
                                          , aws-via-haskell
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , conduit-extra
                                          , lens
                                          , resourcet
                                          , text

executable sdb-app
  default-language:                         Haskell2010
  hs-source-dirs:                           sdb
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            amazonka
                                          , amazonka-sdb
                                          , aws-via-haskell
                                          , base >= 4.7 && < 5
                                          , lens
                                          , text

executable sqs-app
  default-language:                         Haskell2010
  hs-source-dirs:                           sqs
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            amazonka
                                          , amazonka-sqs
                                          , aws-via-haskell
                                          , base >= 4.7 && < 5
                                          , lens
                                          , text
